--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "optbuild": "node side-effects-analyzer.mjs && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.2.3",
+    "acorn": "^8.11.3",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
+    "next": "14.2.3",
+    "path": "^0.12.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
-  }
+  },
+  "sideEffects": [
+    "pages/test3.js"
+  ]
 }
