--- a/package.json
+++ b/package.json
@@ -28,7 +28,5 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0"
   },
-  "sideEffects": [
-    "pages/barrel-package/test2.js"
-  ]
+  "sideEffects": []
 }
